src/pages/styles.module.css
/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
  height: 100%;
}

@media screen and (max-width: 966px) {
  .heroBanner {
    padding: 2rem;
  }
}


.heroLogo {
  position: relative;
  display: inline-block;
  width: 120px;
  height: 120px;
  padding: 10px;
  border-radius: 8px;
  margin-bottom: 12px;
  background: var(--ifm-background-color, white);
  overflow: hidden;
}

.heroLogo img {
  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.275));
}

.logoRibbon {
  position: absolute;
  display: block;
  bottom: 10px;
  right: 20px;
  background: #ff416b;
  font-weight: bold;
  width: 100px;
  text-align: center;
  transform: translateX(50%) rotate(-45deg);
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.getStarted:not(.button-active):not(:hover) {
  --ifm-font-base-color: #ebedf0;
}

.features {
  display: flex;
  align-items: center;
  padding: 2rem 0;
  width: 100%;
}

.featureImage {
  height: 200px;
  width: 200px;
}

